--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node ./seeds/seed.js",
     "start": "node ./server.js",
-    "devwatch": "nodemon ./server.js"
+    "devwatch": "nodemon ./server.js",
+    "postinstall": "npm rebuild bcrypt"
   },
   "keywords": [],
   "author": "",
